test_files/.deploy/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-new-service
  labels:
      app: my-new-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-new-service
  template:
    metadata:
      labels:
        app: my-new-service
    spec:
      containers:
      - name: my-new-service
