test_files/.deploy/dev/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-new-service
spec:
  hosts:
  - 'dev.my-site.com'
